# billboard

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.in
src/: requirements.txt
src/billboard/: __main__.py  database.py  scraper.py
src/billboardsingles/: __main__.py  app.py  closedai.py  database.py  genius.py  requirements.txt  scraper.py  summarize.py  wiki.py
tests/: test_scraper.py
